--- a/.github/workflows/Create first-action.yml
+++ b/.github/workflows/Create first-action.yml
@@ -7,5 +7,6 @@ jobs:
       - name: print greeting
         run: echo "Hello world"
       - name: Print goodbye
-        run: echo "Done - bye!"
-    
+        run: |
+          echo "Done - bye!"
+          echo "Hello Indika"
